modules/vpc/main.tf
locals {
    az_count = length(var.availability_zones)
}

#----------------------------------------------------------
#vpc
#----------------------------------------------------------
resource "aws_vpc" "this" {
    cidr_block  = var.vpc_cidr
    enable_dns_hostnames = true
    enable_dns_support  = true

    tags = merge(var.tags, {
        Name =  "${var.name}-vpc"
    })
}

#-----------------------------------------------------------
# Internet Gateway
#-----------------------------------------------------------
resource "aws_internet_gateway" "this" {
    vpc_id = aws_vpc.this.id

    tags = merge(var.tags, {
        Name =  "${var.name}-igw"
    })
}

#-----------------------------------------------------------
# Public Subnet
#-----------------------------------------------------------
resource "aws_subnet" "public" {
    count = local.az_count

    vpc_id            = aws_vpc.this.id
    cidr_block        = var.public_subnet_cidrs[count.index]
    availability_zone = var.availability_zones[count.index]
    map_public_ip_on_launch = true

    tags = merge(var.tags, {
        Name =  "${var.name}-public-${var.availability_zones[count.index]}"
        Type = "public"
    })
}

#-----------------------------------------------------------
# Private Subnet
#-----------------------------------------------------------
resource "aws_subnet" "private" {
  count = local.az_count

  vpc_id = aws_vpc.this.id
  cidr_block = var.private_subnet_cidrs[count.index]
  availability_zone = var.availability_zones[count.index]

  tags = merge(var.tags, {
    Name = "${var.name}-private-${var.availability_zones[count.index]}"
    Type = "private"
  })
}

#-----------------------------------------------------------
# Elastic IPs for NAT Gateway
#-----------------------------------------------------------
resource "aws_eip" "nat" {
    count = var.single_nat_gateway ? 1 : local.az_count

    tags = merge(var.tags, {
        Name = "${var.name}-nat-eip-${count.index + 1}"
    })
  
    depends_on = [ aws_internet_gateway.this ]
}

#-----------------------------------------------------------
# NAT Gateway
#-----------------------------------------------------------    
resource "aws_nat_gateway" "this" {
    count = var.single_nat_gateway ? 1 : local.az_count

    allocation_id = aws_eip.nat[count.index].id
    subnet_id     = aws_subnet.public[count.index].id

    tags = merge(var.tags, {
        Name = "${var.name}-nat-${count.index + 1}"
    })

    depends_on = [ aws_internet_gateway.this ]
}

#-----------------------------------------------------------
# Public Route Table
#-----------------------------------------------------------
resource "aws_route_table" "public" {
    vpc_id = aws_vpc.this.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.this.id
    }

    tags = merge(var.tags, {
        Name = "${var.name}-public-rt"
    })
}

resource "aws_route_table_association" "public" {
    count = local.az_count

    subnet_id      = aws_subnet.public[count.index].id
    route_table_id = aws_route_table.public.id
}

#-----------------------------------------------------------
# Private Route Table
#-----------------------------------------------------------
resource "aws_route_table" "private" {
  count  = local.az_count
  vpc_id = aws_vpc.this.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = var.single_nat_gateway ? aws_nat_gateway.this[0].id : aws_nat_gateway.this[count.index].id
  }

  tags = merge(var.tags, {
    Name = "${var.name}-private-rt-${count.index + 1}"
  })
}

resource "aws_route_table_association" "private" {
  count = local.az_count

  subnet_id      = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private[count.index].id
}
